[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "ardor_reward_summary"
version = "1.0.0"
description = "Template command line app."
readme = "README.md"
authors = [{ name = "qf3l3k", email = "qf3l3k@chaintools.tech" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["command", "monitoring"]
dependencies = [
    'build==0.8.0',
    'certifi==2022.9.24',
    'charset-normalizer==2.1.1',
    'colorama==0.4.5',
    'idna==3.4',
    'numpy==1.23.3',
    'packaging==21.3',
    'pandas==1.5.0',
    'pep517==0.13.0',
    'prettytable==3.4.1',
    'pyparsing==3.0.9',
    'python-dateutil==2.8.2',
    'pytz==2022.4',
    'requests==2.28.1',
    'six==1.16.0',
    'tomli==2.0.1',
    'urllib3==1.26.12',
    'wcwidth==0.2.5'
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ChainTools-Tech/ardor_reward_summary"

[project.scripts]
ardor_reward_summary = "ardor_reward_summary.__main__:main"
